# ChangeLog for net-misc/nxclient
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nxclient/ChangeLog,v 1.73 2009/01/16 10:12:16 voyageur Exp $

*nxclient-3.3.0.6 (16 Jan 2009)

  16 Jan 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +nxclient-3.3.0.6.ebuild:
  Maintenance release version bump

*nxclient-3.3.0.3 (21 Nov 2008)

  21 Nov 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +nxclient-3.3.0.3.ebuild:
  3.3.0 version bump

*nxclient-3.2.0.14 (26 Aug 2008)

  26 Aug 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +nxclient-3.2.0.14.ebuild:
  Add 3.2.0-14, x86 only. Bug #232045

  21 Jul 2008; Bernard Cafarelli <voyageur@gentoo.org>
  -nxclient-3.0.0-r3.ebuild, -nxclient-3.0.0-r5.ebuild,
  -nxclient-3.1.0.ebuild, -nxclient-3.1.0-r1.ebuild:
  Remove old 3.0/3.1 versions

*nxclient-3.2.0.13 (21 Jul 2008)

  21 Jul 2008; Bernard Cafarelli <voyageur@gentoo.org>
  -nxclient-3.2.0-r1.ebuild, +nxclient-3.2.0.13.ebuild:
  Add minor release to ebuild version

*nxclient-3.2.0-r1 (16 Jul 2008)

  16 Jul 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +nxclient-3.2.0-r1.ebuild:
  First Maintenance Release, minor bugfixes

  05 Jun 2008; Peter Volkov <pva@gentoo.org> nxclient-3.2.0.ebuild:
  amd64 stable, bug #222967.

  29 May 2008; Christian Faulhammer <opfer@gentoo.org>
  nxclient-3.2.0.ebuild:
  x86 stable, bug #222967

*nxclient-3.2.0 (09 Apr 2008)

  09 Apr 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +nxclient-3.2.0.ebuild:
  Version bump, new 3.2.0 series

  19 Mar 2008; Peter Volkov <pva@gentoo.org> nxclient-3.1.0-r1.ebuild:
  amd64 stable, security bug #210317.

  18 Feb 2008; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
  stable x86, security bug 210317

  18 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  nxclient-3.1.0.ebuild:
  stable x86, security bug 210317

*nxclient-3.1.0-r1 (08 Feb 2008)

  08 Feb 2008; Bernard Cafarelli <voyageur@gentoo.org>