@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nxclient/Attic/nxclient-3.3.0.3.ebuild,v 1.1 2008/11/21 10:37:40 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nxclient/Attic/nxclient-3.3.0.3.ebuild,v 1.2 2009/02/05 02:06:38 rich0 Exp $
 
 inherit eutils versionator
 
@@ -12,7 +12,7 @@ SRC_URI="amd64? ( http://64.34.161.181/download/${MAJOR_PV}/Linux/nxclient-${FUL
 	x86? ( http://64.34.161.181/download/${MAJOR_PV}/Linux/nxclient-${FULL_PV}.i386.tar.gz )"
 LICENSE="nomachine"
 SLOT="0"
-KEYWORDS="-* ~amd64 ~x86"
+KEYWORDS="-* amd64 ~x86"
 IUSE=""
 RESTRICT="strip"
 
